# linear-regression-qt

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc
headers/: RegressionChartManager.h
sources/: RegressionChartManager.cpp
